// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SimpleAnnotation/AnnotatorLabel should render a drawing annotation label 1`] = `
<AnnotatorLabel
  currentUser={
    Object {
      "email": "princess@genovia.gov",
      "id": "789ghi",
      "name": "Mia Thermopolis",
      "type": "user",
    }
  }
  id="123"
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
  type="draw"
/>
`;

exports[`components/SimpleAnnotation/AnnotatorLabel should render a highlight annotation label 1`] = `
<AnnotatorLabel
  currentUser={
    Object {
      "email": "princess@genovia.gov",
      "id": "789ghi",
      "name": "Mia Thermopolis",
      "type": "user",
    }
  }
  id="123"
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
  type="highlight"
/>
`;

exports[`components/SimpleAnnotation/AnnotatorLabel should render an anonymous drawing annotation label 1`] = `
<AnnotatorLabel
  id="123"
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
  type="draw"
/>
`;

exports[`components/SimpleAnnotation/AnnotatorLabel should render an anonymous highlight annotation label 1`] = `
<AnnotatorLabel
  id="123"
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
  type="highlight"
/>
`;
